# KORE-master

./: .gitignore  Makefile.am  README.md  autogen.sh  build_complete.sh  build_complete_final.sh  build_final.sh  build_fixed.sh  build_master.sh  configure.ac  configure~
depends/: config.site.in
doc/: tor-as-module.md
release/: kore-cli
share/: kore_0.13.2.13.dsc  kore_0.13.2.13.tar.xz  kore_0.13.2.13_amd64.build  kore_0.13.2.13_amd64.buildinfo  kore_0.13.2.13_amd64.changes
share/debian/debian/: files  kore.substvars
share/debian/debian/kore/DEBIAN/: control  md5sums  postinst  postrm
share/debian/debian/kore/usr/local/share/kore/: kore-cli
share/debian/debian/kore/usr/local/share/kore/torbrowser-setup/: mozilla.cfg  {f47ca0a8-45b9-467e-8e4f-00d4fdb5acf1}.xpi
src/: Makefile.am  Makefile.am.broken  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  db.cpp  httpserver.cpp  init.cpp  kernel.cpp  kernel.h  key.cpp  kored.cpp  main.cpp  miner.cpp  net.cpp  net.h  netaddress.cpp  netaddress.h  onion_patch.cpp  rpcserver.cpp  stakeinput.cpp  stakeinput.h  torcontrol.cpp  txdb.cpp  util.cpp  util.h  validationinterface.cpp  version.h
src/qt/: bitcoingui.cpp  captchadialog.cpp  captchadialog.h  clientmodel.cpp  guiutil.cpp  kore.cpp  multisenddialog.cpp  networkstyle.cpp  paymentserver.cpp  splashscreen.cpp  trafficgraphwidget.cpp  transactiondesc.cpp  transactiontablemodel.cpp  walletmodel.cpp
src/qt/forms/: captchadialog.ui
src/rpc/: rpcnet.cpp
src/univalue/: Makefile.am  stamp-h2
tools/: smart_stake_spreader.py
